# chunk-your-tools

./: .cursorignore  .env.example  .git-trufflehog-backup-37401  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .markdownlintignore  .osgrepignore  .pre-commit-config.yaml  .secrets.baseline  .talismanrc  CHANGELOG.md  CONFIG.md  Cargo.toml  DEV.md  EXECUTOR.md  LIMITATIONS.md  MIGRATION.md  README.md  build.rs  cbindgen.toml  chunk_your_tools.h  count_request_tokens.py  deny.toml  package-lock.json  package.json  typos.toml
.ast-grep/rule-tests/: Test.md
.ast-grep/rules/: Lint.md  avoid-nested-links-tsx.yml  find-import-file-without-extension-ts.yml  hashids-with-django-secret-python.yml  incorrect-return-type.yaml  insecure-cors-config.yaml  litellm-hardcoded-secret-python.yml  missing-component-decorator-ts.yml  missing-sse-upload.yaml  no-await-in-promise-all-ts.yml  no-console-except-catch-ts.yml  no-print-statements.yaml  openrouter-hardcoded-secret-python.yml  optional-to-none-union.yaml  prefer-generator-expressions.yaml  pytest-fixture-return-type.yaml  pytest-fixture-type-hints.yaml  python-elasticsearch-hardcoded-bearer-auth-python.yml  python-ldap3-empty-password-python.yml  python-peewee-pg-empty-password-python.yml  python-peewee-pg-hardcoded-secret-python.yml  python-pg8000-empty-password-python.yml  python-pg8000-hardcoded-secret-python.yml  python-psycopg2-empty-password-python.yml  python-psycopg2-hardcoded-secret-python.yml  python-pyjwt-hardcoded-secret-python.yml  python-redis-empty-password-python.yml  python-redis-hardcoded-secret-python.yml  python-requests-empty-password-python.yml  python-urllib3-hardcoded-secret-python.yml  python-webrepl-empty-password-python.yml  python-webrepl-hardcoded-secret-python.yml  rewrite-mobx-component-tsx.yml  security-node-sequelize-empty-password-argument-ts.yml  security-node-sequelize-hardcoded-secret-argument-ts.yml  security-plaintext-http-link-html.yml  speed-up-barrel-import-ts.yml  sqlalchemy-mapped-column.yaml  upgrade-ant-design-vue-html.yml  use-walrus-operator.yaml
.github/workflows/: ci.yml  e2e-published-crates.yml  e2e-published-npm.yml  e2e-published-pypi.yml  e2e-published-sdk.yml  publish-c-ffi.yml  publish-crates.yml  publish-npm-sdk.yml  publish-pypi-sdk.yml  sdk-c-go.yml
backlog/tasks/: task-0001 - Investigate-MCP-SPEC-changes-since-the-previous-revision-2025-11-25..md
debug/: README.md  example.json  full_example.json
examples/: README.md  _repo_root.sh  decompose.sh  recompose.sh  survivors-named.json
examples/catalog/: tools.json
examples/catalog/schemas/decomposed/: Agent.json  mcp__github__create_issue.json  metadata.json
examples/catalog/schemas/full/: Agent.json  mcp__github__create_issue.json  metadata.json
examples/go-git-smoke/: .gitignore  README.md  ensure-ffi.sh  go.mod.in  main.go  prepare.sh  run.sh
examples/input/: survivors-legacy.json  survivors-named.json  tools-large.json  tools.json
examples/output/: agent-only.json  legacy-all-mcp.json  legacy-with-policies.json  named-from-input.json  named.json  survivors-agent-only.json
examples/providers/: openrouter-anthropic.sh
scripts/: all-fallow.sh  c-sdk-precommit.sh  chunk-your-tools-cli.sh  ensure-go-module-tag.sh  go-sdk-precommit.sh  local-dev-lib.sh  local-dev.sh  prek-hook-groups.yaml  prek-hook.sh  prek-loop.sh  psscriptanalyzer-docker.ps1  psscriptanalyzer-docker.sh  publish-crates.sh  publish-git.sh  publish-npm.sh  publish-pypi.sh  shorten-paths.sh  sync-version.sh  trufflehog-hook.sh
sdk/: Taskfile.yml
sdk/c/: .clang-tidy  CMakeLists.txt  README.md
sdk/c/cmake/: CYTConfig.cmake.in  ChunkYourToolsConfig.cmake.in
sdk/c/examples/: basic.c  common.h  error_handling.c  policies.c  retrieve.c
sdk/c/include/: chunk_your_tools.h
sdk/c/scripts/: build-c-lib.sh
sdk/e2e/: README.md
sdk/e2e/go/: example_snapshot.go  go.mod.in  policies_smoke_test.go  registry_smoke_test.go
sdk/e2e/python/: pyproject.toml.in
sdk/e2e/python/tests/: conftest.py  example_snapshot.py  test_tokens_smoke.py  (+1 more)
sdk/e2e/rust/: Cargo.toml.in
sdk/e2e/scripts/: build-staging-c-lib.sh  ensure-release-native.sh  host-rust-target.sh  parse-version.sh  prepare-release-checkout.sh  render-manifests.sh  resolve-version-from-parent.sh  run-all.sh  run-local.sh  run-target.sh  uv-sync-with-retry.sh  wait-registry.sh
sdk/e2e/typescript/: .fallowrc.json  .gitignore  package.json.in  tsconfig.json
sdk/go/: README.md  build.go  catalog_io.go  cgo_lib.go  chunk_your_tools.go  chunk_your_tools_test.go  go.mod  go.sum  parity_test.go  paths.go  policies.go  policies_batch.go  policies_helpers.go  policy_context.go  retrieve.go  runtime.go  tokens.go  tokens_batch.go  version.go
sdk/go/moduleversion/: version.go
sdk/go/scripts/: install-llvm-mingw.ps1  prepare-windows-cgo.sh
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/src/chunk_your_tools/: __init__.py  build.py  catalog_io.py  paths.py  policies.py  retrieve.py  runtime_defaults.py  survivors.py  tokens.py  version.py
sdk/python/tests/: test_smoke.py
sdk/typescript/: .fallowrc.json  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: build.ts  catalog-io.ts  core.ts  decomposed-catalog.ts  index.ts  native.ts  paths.ts  policies.ts  retrieve.ts  runtime-defaults.ts  survivors.ts  tokens.ts  types.ts
search/: prek-loop.sh
src/: README.md  build.rs  catalog_builder.rs  catalog_io.rs  json_util.rs  lib.rs  node.rs  paths.rs  policies.rs  policies_node.rs  policies_python.rs  python.rs  retrieve.rs  runtime_config.rs  survivors.rs  tokens_node.rs  tokens_python.rs  tool_entries.rs
src/bindings/: cbindgen_stubs.rs  manifest.rs  mod.rs
src/ffi/: catalog.rs  catalog_io.rs  error.rs  json_util.rs  memory.rs  mod.rs  paths.rs  policies.rs  retrieve.rs  runtime.rs  tokens.rs
src/tiktoken/: config.rs  mod.rs
tests/: ffi_policies.rs  ffi_smoke.rs  integration.rs
typings/: Stemmer.pyi  brotli.pyi
typings/fastmcp/: __init__.pyi
typings/libsql_experimental/: __init__.pyi
typings/uuid_extensions/: __init__.pyi
(+20 files in other folders)
