[package]
name = "chunk-your-tools"
version = "1.0.0"
edition = "2024"
authors = ["Damien Berezenko"]
description = "MCP tool schema decomposition and recomposition"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/qdrddr/chunk-your-tools"
keywords = ["mcp", "json-schema", "tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "assets/",
]

[lib]
name = "chunk_your_tools"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "chunk-your-tools"
path = "src/bin/chunk-your-tools.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = []
python = ["pyo3", "pythonize"]
node = ["napi", "napi-derive"]
ffi = []

[dependencies]
clap = { version = "4", features = ["derive"] }
napi = { version = "3", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "3", optional = true, features = ["type-def"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py312"], optional = true }
pythonize = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.12"

[build-dependencies]
cbindgen = "0.29"
napi-build = "2"

[[test]]
name = "ffi_smoke"
path = "tests/ffi_smoke.rs"
required-features = ["ffi"]

[[test]]
name = "ffi_policies"
path = "tests/ffi_policies.rs"
required-features = ["ffi"]
