[project]
name = "chunk-your-tools"
version = "2.0.3"
description = "Python SDK for chunk-your-tools — tool schema decomposition and recomposition"
requires-python = ">=3.13,<4.0"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Damien Berezenko" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../Cargo.toml"
features = ["python"]
module-name = "chunk_your_tools._native"
python-source = "src"

[dependency-groups]
dev = [
    "maturin>=1.7,<2.0",
    "basedpyright>=1.38",
    "pytest>=8",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "basic"
failOnWarnings = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportExplicitAny = false
reportAny = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["W391"]
